--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ attacks:
     alpha: 0.5
     lambda_lf: 0.1
     wave: "wavelet"
+    Targeted: False  # Add this line to make the attack configurable
   - mode: "DeepFool"
     steps: 50
     overshoot: 0.02
@@ -24,6 +25,6 @@ attacks:
     kappa: 0
     steps: 100
     lr: 0.01
-  - mode: "CW"
+  - mode: "JSMA"
     theta: 1.0
     gamma: 0.1
