--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 device: "cuda"
-dataset: "cifar100"  # Options: cifar10, cifar100, imagenet_val
+dataset: "imagenet_val"  # Options: cifar10, cifar100, imagenet_val
 'dataset_root': './data'
 bs: 32  # Default batch size
 workers: 2  # Default number of workers
